[Upgraded] v2.5.6 improved algorithm implementation